--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -6,8 +6,8 @@
 - Overlapping points between different map files share same water levels but have different velocities at map edges.
 
 ## Tasks:
-1) Investigate overlapping points between different "*_map.nc" files.
-2) Investigate where instability for water level (SSH) occurs during runs starting from Nov. 15, 2023.
+1) Investigate overlapping points between different "*_map.nc" files. </br>
+3) Investigate where instability for water level (SSH) occurs during runs starting from Nov. 15, 2023.
 
 ## Results:
 ### 1) Overlapping points in "*_map.nc" files
@@ -29,6 +29,7 @@ Figure 3: Velocity (magnitude) at overlapping points between map partitions (new
 Figure 4: Velocity (magnitude) at overlapping points between map partitions (older setup).
 ![Overlapping points zoomed (older setup)](../Figures/042324meeting/OverlappingPoints_GH_StantecOriginal_zoomed.png)
 
+## 2) Instabilities
 - Water levels for original model (tides only) has instability around north channel of WB (+9.64m) that persists around this area for the entirety of the run (north channel and south GH).
 - DFM run starting from November 15 has instabilities at H=5 along the north coast, then instabilities start to rise inside the Straight of Juan De Fuca/Bellingham. By H=30, water level instabilities still exist in the straight and instability starts to grow at northern boundary. At H=38, instabilities at northern boundary grow very large (-58m).
 
