--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -6,7 +6,7 @@
 - Overlapping points between different map files share same water levels but have different velocities at map edges.
 
 ## Tasks:
-1) Investigate overlapping points between different "*_map.nc" files. </br>
+1) Investigate overlapping points between different "*_map.nc" files. <br>
 3) Investigate where instability for water level (SSH) occurs during runs starting from Nov. 15, 2023.
 
 ## Results:
