--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -7,12 +7,12 @@
 
 ## Tasks:
 1) Investigate overlapping points between different "*_map.nc" files. <br>
-3) Investigate where instability for water level (SSH) occurs during runs starting from Nov. 15, 2023.
+2) Investigate where instability for water level (SSH) occurs during runs starting from Nov. 15, 2023.
 
 ## Results:
 ### 1) Overlapping points in "*_map.nc" files
 
-*older setup = original setup with model domain partitioned into 8 files (nodes=4; ntasks-per-node=2; cpus-per-task=8; nNodes=4; nProc=2)
+*older setup = original setup with model domain partitioned into 8 files (nodes=4; ntasks-per-node=2; cpus-per-task=8; nNodes=4; nProc=2) <br>
 *newer setup = newer setup with model domain paritioned into 15 files (nodes=1; ntasks-per-node=40; nNodes=1; nProc=16)
 
 The different "*_map.nc" files have overlapping points. Investigating FlowFM_0013_map.nc and FlowFM_0015_map.nc files (GH) shows 2198 points overlapping. Water levels at these points are consistent with each other. However, velocities differ (primarily at the edges of each file boundary). Overlapping points may be necessary for feeding boundary conditions for forcing the other map file.
