--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -15,7 +15,7 @@
 *older setup = original setup with model domain partitioned into 8 files (nodes=4; ntasks-per-node=2; cpus-per-task=8; nNodes=4; nProc=2) <br>
 *newer setup = newer setup with model domain paritioned into 15 files (nodes=1; ntasks-per-node=40; nNodes=1; nProc=16)
 
-The different "*_map.nc" files have overlapping points. Investigating FlowFM_0013_map.nc and FlowFM_0015_map.nc files (GH) shows 2198 points overlapping. Water levels at these points are consistent with each other. However, velocities differ (primarily at the edges of each file boundary). Overlapping points may be necessary for feeding boundary conditions for forcing the other map file.
+The different "*_map.nc" files have overlapping points. Investigating FlowFM_0013_map.nc and FlowFM_0015_map.nc files (GH) shows 2198 points overlapping. Water levels at these points are consistent with each other (Figures 3,4). However, velocities differ (primarily at the edges of each file boundary). Overlapping points may be necessary for feeding boundary conditions for forcing the other map file.
 
 Figure 1: Overlapping points within Gray's Harbor with new(er) DFM model setup.
 ![Overlapping points (newer setup)](../Figures/042324meeting/OverlappingPoints_GH.png)
@@ -31,7 +31,7 @@ Figure 4: Velocity (magnitude) at overlapping points between map partitions (old
 
 ## 2) Instabilities
 - Water levels for original model (tides only) has instability around north channel of WB (+9.64m) that persists around this area for the entirety of the run (north channel and south GH).
-- DFM run starting from November 15 has instabilities at H=5 along the north coast, then instabilities start to rise inside the Straight of Juan De Fuca/Bellingham. By H=30, water level instabilities still exist in the straight and instability starts to grow at northern boundary. At H=38, instabilities at northern boundary grow very large (-58m).
+- DFM run starting from November 15 has instabilities at H=5 along the north coast (Figure 8), then instabilities start to rise inside the Straight of Juan De Fuca/Bellingham (Figures 9,10). By H=30, water level instabilities still exist in the straight and instability starts to grow at northern boundary (Figure 10). At H=38, instabilities at northern boundary grow very large (-58m) (Figure 11).
 
 Figure 5: Water levels for DFM model (Nov. 15 start) at H=00.
 ![Water levels (H=00)](../Figures/042324meeting/Instability_map_nov15_H00.png)
