--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -17,25 +17,25 @@
 
 The different "*_map.nc" files have overlapping points. Investigating FlowFM_0013_map.nc and FlowFM_0015_map.nc files (GH) shows 2198 points overlapping. Water levels at these points are consistent with each other (Figure 3). However, velocities differ (primarily at the edges of each file boundary) (Figures 4,5,6,7). Overlapping points may be necessary for feeding boundary conditions for forcing the other map file.
 
-Figure 1: Overlapping points within Gray's Harbor with new(er) DFM model setup.
+<strong><em>Figure 1: Overlapping points within Gray's Harbor with new(er) DFM model setup.</em>
 ![Overlapping points (newer setup)](../Figures/042324meeting/OverlappingPoints_GH.png)
 
-Figure 2: Overlapping points within Gray's Harbor with older DFM model setup.
+<strong><em>Figure 2: Overlapping points within Gray's Harbor with older DFM model setup.</em>
 ![Overlapping points (older setup)](../Figures/042324meeting/OverlappingPoints_GH_StantecOriginal.png)
 
-Figure 3: Water level differences for overlapping points in FlowFM_0013 and FlowFM_0015.
+<strong><em>Figure 3: Water level differences for overlapping points in FlowFM_0013 and FlowFM_0015.</em>
 ![Overlapping points (water levels)](../Figures/042324meeting/OverlappingPoints_sshdiff.png)
 
-Figure 4: Velocity (magnitude) at overlapping points between map partitions (newer setup).
+<strong><em>Figure 4: Velocity (magnitude) at overlapping points between map partitions (newer setup).</em>
 ![Overlapping points zoomed (newer setup)](../Figures/042324meeting/OverlappingPoints_GH_zoomed.png)
 
-Figure 5: Velocity (magnitude) at overlapping points between map partitions (older setup).
+<strong><em>Figure 5: Velocity (magnitude) at overlapping points between map partitions (older setup).</em>
 ![Overlapping points zoomed (older setup)](../Figures/042324meeting/OverlappingPoints_GH_StantecOriginal_zoomed.png)
 
-Figure 6: Velocity differences of overlapping points in FlowFM_0013 and FlowFM_0015 at H=00.
+<strong><em>Figure 6: Velocity differences of overlapping points in FlowFM_0013 and FlowFM_0015 at H=00.</em>
 ![Overlapping velocity time series (H=00)](../Figures/042324meeting/VelMagDiff_GH.png)
 
-Figure 7: Velocity differences of overlapping points in FlowFM_0013 and FlowFM_0015 at from H=0:49.
+<strong><em>Figure 7: Velocity differences of overlapping points in FlowFM_0013 and FlowFM_0015 at from H=0:49.</em>
 ![Overlapping velocity time series (H=0:49)](../Figures/042324meeting/OverlappingPoints_veldiff.png)
 
 
@@ -43,37 +43,37 @@ Figure 7: Velocity differences of overlapping points in FlowFM_0013 and FlowFM_0
 - Water levels for original model (tides only) has instability around north channel of WB (+9.64m) that persists around this area for the entirety of the run (north channel and south GH).
 - DFM run starting from November 15 has instabilities at H=5 along the north coast (Figure 11), then instabilities start to rise inside the Straight of Juan De Fuca/Bellingham (Figures 12,13). By H=30, water level instabilities still exist in the straight and instability starts to grow at northern boundary (Figure 13). At H=38, instabilities at northern boundary grow very large (-58m) (Figure 14).
 
-Figure 8: Water levels for DFM model (Nov. 15 start) at H=00.
+<strong><em>Figure 8: Water levels for DFM model (Nov. 15 start) at H=00.</em>
 ![Water levels (H=00)](../Figures/042324meeting/Instability_map_nov15_H00.png)
 
-Figure 9: Water levels for DFM model (Nov. 15 start) at H=03.
+<strong><em>Figure 9: Water levels for DFM model (Nov. 15 start) at H=03.</em>
 ![Water levels (H=03)](../Figures/042324meeting/Instability_map_nov15_H03.png)
 
-Figure 10: Water levels for DFM model (Nov. 15 start) at H=04.
+<strong><em>Figure 10: Water levels for DFM model (Nov. 15 start) at H=04.</em>
 ![Water levels (H=04)](../Figures/042324meeting/Instability_map_nov15_H04.png)
 
-Figure 11: Water levels for DFM model (Nov. 15 start) at H=05.
+<strong><em>Figure 11: Water levels for DFM model (Nov. 15 start) at H=05.</em>
 ![Water levels (H=05)](../Figures/042324meeting/Instability_map_nov15_H05.png)
 
-Figure 12: Water levels for DFM model (Nov. 15 start) at H=06.
+<strong><em>Figure 12: Water levels for DFM model (Nov. 15 start) at H=06.</em>
 ![Water levels (H=06)](../Figures/042324meeting/Instability_map_nov15_H06.png)
 
-Figure 13: Water levels for DFM model (Nov. 15 start) at H=30.
+<strong><em>Figure 13: Water levels for DFM model (Nov. 15 start) at H=30.</em>
 ![Water levels (H=30)](../Figures/042324meeting/Instability_map_nov15_H30.png)
 
-Figure 14: Water levels for DFM model (Nov. 15 start) at H=38.
+<strong><em>Figure 14: Water levels for DFM model (Nov. 15 start) at H=38.</em>
 ![Water levels (H=38)](../Figures/042324meeting/Instability_map_nov15_H38.png)
 
 
 DFM run starting from November 23 has instabilities around north channel of WB and south GH which is consistent. Otherwise, water levels at other times seem to be normal (H=39, 120).
 
-Figure 15: Water levels for DFM model (Nov. 23 start) at H=00.
+<strong><em>Figure 15: Water levels for DFM model (Nov. 23 start) at H=00.</em>
 ![Water levels (H=30)](../Figures/042324meeting/Instability_map_nov23_H00.png)
 
-Figure 16: Water levels for DFM model (Nov. 23 start) at H=39.
+<strong><em>Figure 16: Water levels for DFM model (Nov. 23 start) at H=39.</em>
 ![Water levels (H=39)](../Figures/042324meeting/Instability_map_nov23_H39.png)
 
-Figure 17: Water levels for DFM model (Nov. 23 start) at H=120.
+<strong><em>Figure 17: Water levels for DFM model (Nov. 23 start) at H=120.</em>
 ![Water levels (H=120)](../Figures/042324meeting/Instability_map_nov23_H120.png)
 
 
