--- a/WeeklyLogs/Log041424_042024.md
+++ b/WeeklyLogs/Log041424_042024.md
@@ -81,4 +81,19 @@ DFM run starting from November 23 has instabilities around north channel of WB a
 - Many instabilities, think about how to fix
 
 ## Next Steps:
+- Reshape input grid for model to exclude points from *.xyz files
 - CoPes poster
+  - Questions:
+    - Where in the Twin Harbors will experience largest inundation during storm events?
+    - In what scenarios will they experience above normal inundation during compound flooding events?
+    - How will inundation levels/locations change with increasing SLR?
+    - What are the main drivers/combination of drivers responsible for inundation?
+    - How important is the timing of different storm related conditions (wind, wave setup, discharge, etc)?
+  - Goals:
+    1. Generate high temporal and spatial resolution water levels and hydrodynamics within the Twin Harbors. 
+    2. Model inundation levels and extent for previous storms and test its ability to model future scenarios. 
+  - Figures:
+    1. Water level validation for Tokepoint and Westport
+    2. Inundation maps for different cases
+    3. Graphic for forcings and outputs
+
