--- a/WeeklyLogs/Log042124_042724.md
+++ b/WeeklyLogs/Log042124_042724.md
@@ -3,11 +3,17 @@
 ## Summary:
 
 ## Tasks:
+1) Run Stantec DFM model for Nov. 23 - Dec. 12, 2023
+2) Make CoPes All Hands poster
+3) Fix ghost cells in overlapping map files
 
 ## Results:
 
 
 ## Issues:
-
+- DFM model did NOT complete
+  - Ran only until Dec. 9, 2023
+  - Model ran for 5 days (expected to finish in ~3-4 days based on previous runs)
+ 
 
 ## Next Steps:
