--- a/WeeklyLogs/Log042124_042724.md
+++ b/WeeklyLogs/Log042124_042724.md
@@ -3,12 +3,14 @@
 ## Summary:
 
 ## Tasks:
-1) Run Stantec DFM model for Nov. 23 - Dec. 12, 2023
-2) Make CoPes All Hands poster
-3) Fix ghost cells in overlapping map files
+1) Fix ghost cells in overlapping map files
+2) Run Stantec DFM model for Nov. 23 - Dec. 12, 2023
+3) Make CoPes All Hands poster
 
 ## Results:
+1) Ghost cells in overlapping map files
 
+Overlapping edge cells (ghost cells) exist in each map file due to parallelization. Had difficulty using OpenEarthTool's 'dflowfm_readDataPartitioned.m' tool working, so created one in Python for cross referencing two map files. Will eventually need to expand to cross reference all map files. Do not need to work on at the moment as water levels at ghost cells agree.
 
 ## Issues:
 - DFM model did NOT complete
