--- a/WeeklyLogs/Log042124_042724.md
+++ b/WeeklyLogs/Log042124_042724.md
@@ -1,14 +1,14 @@
 # April 21 - April 27, 2024
 
 ## Summary:
-1) Ghost cells can be removed by taking the cells with the largest velocities.
-2) CoPes All Hands poster.
-3) DFM model did not run completely.
+1) Ghost cells can be removed by taking the cells with the largest velocities.<br>
+2) CoPes All Hands poster.<br>
+3) DFM model did not run completely.<br>
 
 ## Tasks:
-1) Fix ghost cells in overlapping map files
-2) Run DFM model for Nov. 23 - Dec. 12, 2023
-3) Make CoPes All Hands poster
+1) Fix ghost cells in overlapping map files<br>
+2) Run DFM model for Nov. 23 - Dec. 12, 2023<br>
+3) Make CoPes All Hands poster<br>
 
 ## Results:
 ### 1) Ghost cells in overlapping map files
