--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -3,12 +3,19 @@
 ## Summary:
 
 ## Tasks:
-
+1) CoPes poster and prep
+2) Work on getting OpenEarthTool's dflowfm_readDataPartitioned.m working.
+3) Run DFM model from Nov. 15 - Dec. 12 with just MET forcing.
 
 ## Results:
-### 1)
+### 1) CoPes poster
+![CoPes poster)](../Figures/050624meeting/Chiu_CoPes_poster_v2.pdf)
 
-### 2) 
+### 2) OpenEarthTool
+Previous issue was with nc_varget.m file throwing error: "data cannot be concatenated. Probably caused by different nc_varget function. This function is based on the nc_varget from OEtools." Found another nc_varget.m file that seems to run but giving all 0's as output when running script comparing x-velocity.
+
+### 3) DFM model (Nov. 15 - Dec. 12) with MET
+SSH seemed reasonable when running DFM model with ONLY MET forcing (removed tides). Instability may be due to tides?
 
 ## Issues:
 
