--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -9,7 +9,7 @@
 
 ## Results:
 ### 1) CoPes poster
-![CoPes poster)](../Figures/050624meeting/Chiu_CoPes_poster_v2.png)
+![CoPes poster)](../Figures/050624meeting/Chiu_CoPes_poster_v2.pdf)
 
 ### 2) OpenEarthTool
 Previous issue was with nc_varget.m file throwing error: "data cannot be concatenated. Probably caused by different nc_varget function. This function is based on the nc_varget from OEtools." Found another nc_varget.m file that seems to run but giving all 0's as output when running script comparing x-velocity.
