--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -12,11 +12,12 @@
 ![CoPes poster)](../Figures/050624meeting/Chiu_CoPes_poster_v2.pdf)
 
 ### 2) OpenEarthTool
-Previous issue was with nc_varget.m file throwing error: "data cannot be concatenated. Probably caused by different nc_varget function. This function is based on the nc_varget from OEtools." Found another nc_varget.m file that seems to run but giving all 0's as output when running script comparing x-velocity.
+Previous issue was with nc_varget.m file throwing error: "data cannot be concatenated. Probably caused by different nc_varget function. This function is based on the nc_varget from OEtools." Found another nc_varget.m file that seems to run but giving all 0's as output when running script comparing any variable (time, ssh, velocity, etc)
 
 ### 3) DFM model (Nov. 15 - Dec. 12) with MET
 SSH seemed reasonable when running DFM model with ONLY MET forcing (removed tides). Instability may be due to tides?
 
 ## Issues:
+- Figure out how to use OEtools dflowfm_readDataPartitioned.m (compare and export netcdf to be read in python? or reluctantly work in MATLAB for plotting?)
 
 ## Next Steps:
