--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -17,6 +17,8 @@ Previous issue was with nc_varget.m file throwing error: "data cannot be concate
 ### 3) DFM model (Nov. 15 - Dec. 12) with MET
 SSH seemed reasonable when running DFM model with ONLY MET forcing (removed tides). Instability may be due to tides?
 
+![(SSH)](../Figures/050624meeting/METForcing.png)
+
 ## Issues:
 - Figure out how to use OEtools dflowfm_readDataPartitioned.m (compare and export netcdf to be read in python? or reluctantly work in MATLAB for plotting?)
 
