--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -20,6 +20,7 @@ SSH seemed reasonable when running DFM model with ONLY MET forcing (removed tide
 ![(SSH)](../Figures/050624meeting/METForcing.png)
 
 ## Issues:
-- Figure out how to use OEtools dflowfm_readDataPartitioned.m (compare and export netcdf to be read in python? or reluctantly work in MATLAB for plotting?)
 
 ## Next Steps:
+- Figure out how to use OEtools dflowfm_readDataPartitioned.m (compare and export netcdf to be read in python? or reluctantly work in MATLAB for plotting?)
+- Continue investigating instabilities when beginning on Nov. 15 or prior 
