--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -17,7 +17,8 @@ Previous issue was with nc_varget.m file throwing error: "data cannot be concate
 ### 3) DFM model (Nov. 15 - Dec. 12) with MET
 SSH seemed reasonable when running DFM model with ONLY MET forcing (removed tides). Instability may be due to tides?
 
-![(SSH)](../Figures/050624meeting/METForcing.png)
+![(SSH at Tokepoint)](../Figures/050624meeting/METForcing.png)
+![(SSH at Westport)](../Figures/050624meeting/westport_wl.png)
 
 ## Issues:
 
