--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -1,11 +1,13 @@
 # April 28 - May 04, 2024
 
 ## Summary:
+1) OEtool script now runs but reading all 0's. <br>
+2) SSH seems normal when running model (Nov. 15 - Nov. 27) with only MET .
 
 ## Tasks:
-1) CoPes poster and prep
-2) Work on getting OpenEarthTool's dflowfm_readDataPartitioned.m working.
-3) Run DFM model from Nov. 15 - Dec. 12 with just MET forcing.
+1) CoPes poster and prep.<br>
+2) Work on getting OpenEarthTool's dflowfm_readDataPartitioned.m working.<br>
+3) Run DFM model from Nov. 15 - Dec. 12 with just MET forcing.<br>
 
 ## Results:
 ### 1) CoPes poster
