--- a/WeeklyLogs/Log042824_050424.md
+++ b/WeeklyLogs/Log042824_050424.md
@@ -2,12 +2,14 @@
 
 ## Summary:
 1) OEtool script now runs but reading all 0's. <br>
-2) SSH seems normal when running model (Nov. 15 - Nov. 27) with only MET .
+2) SSH seems normal when running model (Nov. 15 - Nov. 27) with only MET.
+3) SSH seems normal when running model (Nov. 8 - Nov. 27 with only TIDES.
 
 ## Tasks:
 1) CoPes poster and prep.<br>
 2) Work on getting OpenEarthTool's dflowfm_readDataPartitioned.m working.<br>
-3) Run DFM model from Nov. 15 - Dec. 12 with just MET forcing.<br>
+3) Run DFM model from Nov. 15 - Nov. 27 with just MET forcing.<br>
+4) Run DFM model from Nov. 08 - Nov. 27 with just tide forcing.<br>
 
 ## Results:
 ### 1) CoPes poster
@@ -16,11 +18,17 @@
 ### 2) OpenEarthTool
 Previous issue was with nc_varget.m file throwing error: "data cannot be concatenated. Probably caused by different nc_varget function. This function is based on the nc_varget from OEtools." Found another nc_varget.m file that seems to run but giving all 0's as output when running script comparing any variable (time, ssh, velocity, etc)
 
-### 3) DFM model (Nov. 15 - Dec. 12) with MET
+### 3) DFM model (Nov. 15 - Nov. 27) with MET
 SSH seemed reasonable when running DFM model with ONLY MET forcing (removed tides). Instability may be due to tides?
 
 ![(SSH at Tokepoint)](../Figures/050624meeting/METForcing.png)
 ![(SSH at Westport)](../Figures/050624meeting/westport_wl.png)
+
+### 4) DFM model (Nov. 08 - Nov. 27) with only tides
+SSH looks reasonable when backing up start time 1 week earlier (NOT at peak spring like Nov. 15).
+
+![(SSH at Tokepoint)](../Figures/050624meeting/tokepoint_wl_tides.png)
+![(SSH at Westport)](../Figures/050624meeting/westport_wl_tides.png)
 
 ## Issues:
 
