--- a/WeeklyLogs/Log050524_051124.md
+++ b/WeeklyLogs/Log050524_051124.md
@@ -11,3 +11,15 @@
 3) Smooth out bathymetry at grid points with instabilities for model runs beginning with spring tides.
 
 ## Results:
+### 1) New DFM files
+The read_d3dfm_results.py file from Shelby uses the Python pickle module to restructure the objects within the original DFM file and concantenates all map netcdf files. Unfortunately, the Twin Harbor map files contain different number of cells and is giving me this error:<br>
+"ValueError: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 32533 and the array at index 1 has size 33516". <br>Will need to redo looping in script to hopefully merge data correctly.
+
+### 2) dflowfm_readDataPartitioned.m file
+Able to get it running and reduce the number of values, but is still showing overlapping coordinates with different velocities (ghost cells are not removed).
+
+![Overlapping Velocities]](../Figures/051424meeting/overlappingvel.png)
+
+### 3) Bathymetry smoothing
+Checking if bathymetry is smooth in areas with instabilities (North Cove). 
+
