--- a/WeeklyLogs/Log050524_051124.md
+++ b/WeeklyLogs/Log050524_051124.md
@@ -8,7 +8,6 @@
 ## Tasks:
 1) Test .py file form Shelby to concatenate DFM files.
 2) Test dflowfm_readDataPartitioned.m file
-3) Smooth out bathymetry at grid points with instabilities for model runs beginning with spring tides.
 
 ## Results:
 ### 1) New DFM files
@@ -20,6 +19,10 @@ Able to get it running and reduce the number of values, but is still showing ove
 
 ![Overlapping Velocities]](../Figures/051424meeting/overlappingvel.png)
 
-### 3) Bathymetry smoothing
-Checking if bathymetry is smooth in areas with instabilities (North Cove). 
+## Issues:
+- dflowfm_readDataPartitioned.m file is not eliminating ghost cells. Shelby has notebok that she will send over that removes ghost cells.
+
+## Next Steps:
+- Look at sages of storm and detide water levels at Westport, Tokepoint, and Montesano.
+- Check bathymetry at North Cove to see if needs to be smoothed out.
 
