--- a/WeeklyLogs/Log050524_051124.md
+++ b/WeeklyLogs/Log050524_051124.md
@@ -17,7 +17,7 @@ The read_d3dfm_results.py file from Shelby uses the Python pickle module to rest
 ### 2) dflowfm_readDataPartitioned.m file
 Able to get it running and reduce the number of values, but is still showing overlapping coordinates with different velocities (ghost cells are not removed).
 
-![Overlapping Velocities]](../Figures/051424meeting/overlappingvel.png)
+![Overlapping Velocities](../Figures/051424meeting/overlappingvel.png)
 
 ## Issues:
 - dflowfm_readDataPartitioned.m file is not eliminating ghost cells. Shelby has notebok that she will send over that removes ghost cells.
