--- a/WeeklyLogs/Log050524_051124.md
+++ b/WeeklyLogs/Log050524_051124.md
@@ -23,6 +23,6 @@ Able to get it running and reduce the number of values, but is still showing ove
 - dflowfm_readDataPartitioned.m file is not eliminating ghost cells. Shelby has notebok that she will send over that removes ghost cells.
 
 ## Next Steps:
-- Look at sages of storm and detide water levels at Westport, Tokepoint, and Montesano.
+- Look at stages of storm and detide water levels at Westport, Tokepoint, and Montesano (Bao et al's compound flooding paper).
 - Check bathymetry at North Cove to see if needs to be smoothed out.
 
