--- a/WeeklyLogs/Log051224_051824.md
+++ b/WeeklyLogs/Log051224_051824.md
@@ -16,17 +16,16 @@
 Able to get Shelby's 'read_d3dfm_results.py' script working and able to merge DFM map files. Script creates individual files for grid (lat, lon), ssh, ucx, ucy, ucmag, and any other data you want.
 
 Figure 1: Map with velocities (using merged dataset).<br>
-![Merged map files](../Figures/052124meeting/mergedVelocityMap.png)
+<img src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/052124meeting/mergedVelocityMap" width="400">
 
 ### 2) Creating grid for expanding SWAN grid
 For CEWA572's final project, I am working on expanding the SWAN grid to incorporate 2/3 other offshore buoys that have spectral data. I will then force the model with data from these two buoys and validate data recorded at the current GH offshore buoy.
 
 Figure 2: Map of Stantec's SWAN grid with offshore buoys.<br>
-![Old SWAN grid with buoys](../Figures/052124meeting/oldSWANgrid.png)
 <img src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/052124meeting/oldSWANgrid.png" width="400">
 
 Figure 3: Map of new SWAN grid expanded to other offshore buoys.<br>
-![New SWAN grid with buoys](../Figures/052124meeting/newSWANgrid.png)
+<img src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/052124meeting/newSWANgrid.png" width="400">
 
 ### 3) DFM issue spreadsheet
 Created file with list of to-do's for DFM issues (current/resolved).
