--- a/WeeklyLogs/Log051224_051824.md
+++ b/WeeklyLogs/Log051224_051824.md
@@ -16,7 +16,7 @@
 Able to get Shelby's 'read_d3dfm_results.py' script working and able to merge DFM map files. Script creates individual files for grid (lat, lon), ssh, ucx, ucy, ucmag, and any other data you want.
 
 Figure 1: Map with velocities (using merged dataset).<br>
-<img src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/052124meeting/mergedVelocityMap" width="400">
+<img src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/052124meeting/mergedVelocityMap.png" width="400">
 
 ### 2) Creating grid for expanding SWAN grid
 For CEWA572's final project, I am working on expanding the SWAN grid to incorporate 2/3 other offshore buoys that have spectral data. I will then force the model with data from these two buoys and validate data recorded at the current GH offshore buoy.
