--- a/WeeklyLogs/Log051224_051824.md
+++ b/WeeklyLogs/Log051224_051824.md
@@ -28,7 +28,7 @@ Figure 3: Map of new SWAN grid expanded to other offshore buoys.<br>
 <img src="https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Figures/052124meeting/newSWANgrid.png" width="400">
 
 ### 3) DFM issue spreadsheet
-Created file with list of to-do's for DFM issues (current/resolved).
+Created file with list of to-do's for DFM issues (current/resolved) (https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/DFMtodo.txt).
 
 ## Issues:
 
