--- a/WeeklyLogs/Log051924_052524.md
+++ b/WeeklyLogs/Log051924_052524.md
@@ -29,15 +29,15 @@ Figure 2: Westport SSH.<br>
 - DFM output shows constant wave period and wave height at each location for entire model run.
 
 Figure 3: Time series of Tp and Hs.<br>
-![](../Figures/052724meeting/TpHs_CDIPGH.png)
+![Time series](../Figures/052724meeting/TpHs_CDIPGH.png)
 Figure 4: Hs at hour=30.<br>
-![](../Figures/052724meeting/Hs_h30.png)
+![Hs at h=30](../Figures/052724meeting/Hs_h30.png)
 Figure 5: Hs at hour=200.<br>
-![](../Figures/052724meeting/Hs_h200.png)
+![Hs at h=200](../Figures/052724meeting/Hs_h200.png)
 Figure 6: Tp at hour=30.<br>
-![](../Figures/052724meeting/Tp_h30.png)
+![Tp at h=30](../Figures/052724meeting/Tp_h30.png)
 Figure 7: Tp at hour=200.<br>
-![](../Figures/052724meeting/Tp_h200.png)
+![Tp at h=200](../Figures/052724meeting/Tp_h200.png)
 
 ## Next Steps:
 - Compare wave spectra from model at Grays Harbor CDIP buoy location and observed data at buoy (if possible).
