--- a/WeeklyLogs/Log051924_052524.md
+++ b/WeeklyLogs/Log051924_052524.md
@@ -14,7 +14,7 @@
 - New files can be found in 'mmfs1/gscratch/derakhti/shared/rchiu18/masterfiles/'
 
 ### 2) Integrate new SWAN grid into DFM model
-Created new grid (.grd) and bathymetry (.dep) files and forced DFM model with new OOI buoy data (western edge, northern edge). Changed .mdw and .bcw files in waves folder to include new BCs and forcing with JONSWAP spectra along both boundaries.
+Created new grid (.grd) and bathymetry (.dep) files and forced DFM model with new OOI buoy data (western edge, northern edge). Changed .mdw and .bcw files in waves folder to include new BCs and forcing with JONSWAP spectra along both boundaries.<br>
 *Note to self: .dep file dimensions must be [m+1:n+1]
 
 Figure 1: SWAN grid.<br>
