Update weekly log

--- a/WeeklyLogs/Log052624_061524.md
+++ b/WeeklyLogs/Log052624_061524.md
@@ -1,13 +1,20 @@
 # May 26 - June 15, 2024
 
 ## Summary:
+1) Installed miniconda and ncview on HYAK
+2) Research plan
 
 
 ## Tasks:
+### 1) Miniconda and ncview on HYAK
+Worked on getting miniconda and ncview installed on HYAK group with accessibility instructions here: https://docs.google.com/document/d/1RHUNBnNoli2_mIT1wn7odFxXyDt4gyNUUh0EequjQj4/edit
 
+### 2) Research plan
+Insert link here
 
 ## Issues:
 
 
 ## Next Steps:
-
+- Discuss summer research goals/plans
+- Continue literature review
