Update weekly log

--- a/WeeklyLogs/Log052624_061524.md
+++ b/WeeklyLogs/Log052624_061524.md
@@ -18,3 +18,4 @@ https://github.com/rychiu18/RC-UW_ResearchLog/blob/master/Documents/ResearchPlan
 ## Next Steps:
 - Discuss summer research goals/plans
 - Continue literature review
+- Transition to new Twin Harbors model
