Update weekly log

--- a/WeeklyLogs/Log061624_062224.md
+++ b/WeeklyLogs/Log061624_062224.md
@@ -1,10 +1,30 @@
 # June 16 - June 22, 2024
 
 ## Summary:
-1)
-2)
+1) Played with DSWx (water surface extent) product for Twin Harbors
+2) Picked atmospheric river event for analysis
 
 ## To do:
-1) Research JPL's OPERA project for meeting w/Karthik
+1) Research DSWx product
 2) Find and start analysis of atmospheric river event
-3) 
+
+
+## Results:
+1) DSWx product
+Found GitHub repo for OPERA products and edited notebook to look at available overlapping data for Twin Harbors.
+
+Figure 1: DSWx map.<br>
+![DSWx map](../Figures/062024meeting/DSWx_GraysHarbor)
+
+2) Atmospheric river event for analysis
+Picked the November 2021 atmospheric river event for analysis and began downloading relevant data (water levels, discharge, MET, wave, etc).
+
+
+Figure 1: November 2021 time series.<br>
+![Nov 2021 time series](../Figures/062024meeting/Nov21_timeseries.png)
+
+## Issues:
+
+## Next steps:
+- Continue investigating DSWx application for Twin Harbors
+- Create formatted data files for November 2021 observation data to be used in DFM
