Update weekly log

--- a/WeeklyLogs/Log061624_062224.md
+++ b/WeeklyLogs/Log061624_062224.md
@@ -14,7 +14,7 @@
 Found GitHub repo for OPERA products and edited notebook to look at available overlapping data for Twin Harbors.
 
 Figure 1: DSWx map.<br>
-![DSWx map](../Figures/062024meeting/DSWx_GraysHarbor)
+![DSWx map](../Figures/062024meeting/DSWx_GraysHarbor.png)
 
 2) Atmospheric river event for analysis
 Picked the November 2021 atmospheric river event for analysis and began downloading relevant data (water levels, discharge, MET, wave, etc).
