--- a/WeeklyLogs/Log061624_062224.md
+++ b/WeeklyLogs/Log061624_062224.md
@@ -1,8 +1,8 @@
 # June 16 - June 22, 2024
 
 ## Summary:
-1) Played with DSWx (water surface extent) product for Twin Harbors
-2) Picked atmospheric river event for analysis
+1) Played with DSWx (water surface extent) product for Twin Harbors<br>
+2) Picked atmospheric river event for analysis<br>
 
 ## To do:
 1) Research DSWx product
