--- a/WeeklyLogs/Log062324_062924.md
+++ b/WeeklyLogs/Log062324_062924.md
@@ -9,10 +9,11 @@
 2) Read papers<br>
 
 ## Results:
-1) CoPes pilot project application
+1) CoPes pilot project application<br>
 https://docs.google.com/document/d/1YhoyvAtD_pVYM3XACTie_ex9Y759hHwi45Sm8jZ4e2o/edit
 
-2) Read papers
+
+2) Read papers<br>
 Dynamic Modeling of Coastal Compound Flooding Hazards Due to Tides, Extratropical Storms, Waves, and Sea-Level Rise: A Case Study in the Salish Sea, Washington (USA) (Nederhoff et al., 2024)
 - Used PS-CoSMoS to compare results between SFINCS and XBeach-NH+ for Whatcom County during 2018 storm
 - Tested flooding extent between two models for different SLR scenarios
