--- a/WeeklyLogs/Log062324_062924.md
+++ b/WeeklyLogs/Log062324_062924.md
@@ -24,7 +24,7 @@ Used a wave transformation lookup table (LUT) of Beach transect runs to prescrib
 	- Flood extent projected to increase by 5-13% from current level to a future 1m SLR
 
 
-On the momentum balance of Tampa Bay (Chen et al., 2019)
+<strong>On the momentum balance of Tampa Bay (Chen et al., 2019)</strong>
 - Used FVCOM and adcp measurements to look at momentum balance in Tampa Bay
 - Complex geometries and freshwater input force momentum balance terms to adjust to close equation
 - Averaging over 91 days:
