Update weekly log

--- a/WeeklyLogs/Log062324_062924.md
+++ b/WeeklyLogs/Log062324_062924.md
@@ -36,7 +36,18 @@ Used a wave transformation lookup table (LUT) of Beach transect runs to prescrib
 
 
 ## Issues:
+- DSWx product doesn't have any usable images for Dec. 2023 storm<br>
+Figure 1: December 08, 2023<br>
+![Dec 08 2023](../Figures/070224meeting/DSWx_120823.png)
+
+Figure 2: December 11, 2023<br>
+![Dec 11 2023](../Figures/070224meeting/DSWx_121123.png)
+
+
+Figure 3: December 13, 2023<br>
+![Dec 13 2023](../Figures/070224meeting/DSWx_121323.png)
 
 ## Next steps:
 - Start creating momentum budget for Willapa Bay and Grays Harbor
+- Find new storm for CoPes proposal
 - Run new DFM model?
