--- a/WeeklyLogs/Log063024_071324.md
+++ b/WeeklyLogs/Log063024_071324.md
@@ -11,22 +11,39 @@
 
 ## Results:
 ### 1) Run DFM model with new grid
+#### Map
 - Run only reached Nov. 25 2300 (2 days and 23 hours) from 20 hours of model run time
+- Some water level instabilities along Vancouver Island and Strait of Juan De Fuca early on (Figure 1, 2, 3)
+	- Columbia River not included?
+- Porter discharge point not reached completely?
+- Much of channel is flooded
+
+Figure 1: Model grid<br>
+![Model grid](../Figures/071124meeting/newgrid.png)
+
+Figure 2: Instabilities (5 hours into model)<br>
+![Instabilities](../Figures/071124meeting/Job19254338_map.png)
+
+Figure 3: Instabilities zoomed (5 hours into model)<br>
+![Instabilities zoomed](../Figures/071124meeting/Job19254338_zoomedmap.png)
+
+#### Water levels
 - Winds looked normal
-- Some instabilities along Vancouver Island and Strait of Juan De Fuca early on (Figure 1)
-	- Thought that straight was ignored in model?
-	- Columbia River also has no water
 - Water levels, water depth, velocity magnitude, bottom stress, discharge magnitude explode:
-	- CDIP036 explodes at ~Nov 25, 2110
-	- TIDE-5-MON (Montesano) explodes at ~Nov 25, 2220
-- 
-### INSERT FIGURES HERE
+	- CDIP036 explodes at ~Nov 25, 2110 (Figure 4)
+	- TIDE-5-MON (Montesano) explodes at ~Nov 25, 2220 (Figure 5, 6)
 
+Figure 4: CDIP036 time series<br>
+![Instabilities zoomed](../Figures/071124meeting/Job19254338_cdip036.png)
 
+Figure 5: Montesano time series<br>
+![Instabilities zoomed](../Figures/071124meeting/Job19254338_montesano.png)
+
+Figure 6: Montesano and Westport water levels<br>
+![Instabilities zoomed](../Figures/071124meeting/newgrid_Montesano_wl.png)
 
 ## Issues:
 - Water levels explodes with new grid
-
 
 ## Next steps:
 - Currently running DFM model with no discharge
