--- a/WeeklyLogs/Log063024_071324.md
+++ b/WeeklyLogs/Log063024_071324.md
@@ -43,13 +43,13 @@ Figure 6: Montesano and Westport water levels<br>
 ![Instabilities zoomed](../Figures/071124meeting/newgrid_Montesano_wl.png)
 
 #### Model run with only Tides and MET (Job19273326)
-- Removed discharge but water levels still explode around the same time
-
-## Issues:
-- Water levels explodes with new grid (Figure 7)
+- Removed discharge but water levels still explode around the same time (Figure 7)
 
 Figure 7: Water level time series for Job19273326
 ![Water level time series](../Figures/071124meeting/Job19273326_timeseries_wl.png)
+
+## Issues:
+- Water levels explodes with new grid 
 
 ## Next steps:
 - Currently running DFM model with no discharge
